omni/tests/goldens/types/unknown_type_16.err
tests/goldens/types/unknown_type_16.omni:1:13: error: unknown type "Mystery16"
     1 | let value16:Mystery16 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_16.omni:1:1: error: cannot assign int to Mystery16
     1 | let value16:Mystery16 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery16 or change the variable type to int
